--- a/src/gtk-2.0/meson.build
+++ b/src/gtk-2.0/meson.build
@@ -4,8 +4,10 @@ configure_file(input : 'gtkrc.in',
 configure_file(input : 'gtkrc.in',
                output : 'gtkrc-dark',
                configuration : dark_config)
-
-
+gtk2_dark_path = theme_path_dark
+if (theme_path == theme_path_dark)
+    gtk2_dark_path=theme_path_dark+'-dark'
+endif
 install_data(
     join_paths(meson.current_build_dir(),'gtkrc-light'), 
     rename: 'gtkrc',
@@ -14,5 +16,5 @@ install_data(
 install_data(
     join_paths(meson.current_build_dir(),'gtkrc-dark'), 
     rename: 'gtkrc',
-    install_dir : join_paths( theme_path_dark , 'gtk-2.0' )
+    install_dir : join_paths( gtk2_dark_path , 'gtk-2.0' )
 )
